src/objects/AMSTATCORP__Linking__c.object
<CustomObject>
    <fields>
        <fullName>AMSTATCORP__AMSTAT_Id__c</fullName>
        <description>AMSTAT linked object ID</description>
        <inlineHelpText>AMSTAT linked object ID</inlineHelpText>
        <label>AMSTAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__AMSTAT_Name__c</fullName>
        <description>AMSTAT linked Object Name</description>
        <inlineHelpText>AMSTAT linked Object Name</inlineHelpText>
        <label>AMSTAT Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__Address_1__c</fullName>
        <description>AMSTAT Address ID</description>
        <inlineHelpText>AMSTAT Address ID</inlineHelpText>
        <label>Address 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__Address_2__c</fullName>
        <description>Link with AMSTAT address. 
Account this address is Shipping Address 
Contact this address is Other Address 
Lead this is not used for leads</description>
        <inlineHelpText>AMSTAT Address ID</inlineHelpText>
        <label>Address 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__Object_Type_Name__c</fullName>
        <description>Salesforce.com sObject Type name</description>
        <inlineHelpText>Salesforce.com sObject Type name</inlineHelpText>
        <label>Object Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__Parent_ID__c</fullName>
        <description>ID of associated parent record. For example the account id for a contact</description>
        <inlineHelpText>ID of associated parent record. For example the account id for a contact</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__SFDC_ID__c</fullName>
        <description>Salesforce.com sObject ID</description>
        <inlineHelpText>Salesforce.com sObject ID</inlineHelpText>
        <label>SFDC ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__SFDC_Name__c</fullName>
        <description>Salesforce.com sObject record Name</description>
        <inlineHelpText>Salesforce.com sObject record Name</inlineHelpText>
        <label>SFDC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Linking</label>
    <listViews>
        <fullName>AMSTATCORP__Accounts</fullName>
        <columns>NAME</columns>
        <columns>AMSTATCORP__SFDC_ID__c</columns>
        <columns>AMSTATCORP__SFDC_Name__c</columns>
        <columns>AMSTATCORP__AMSTAT_Id__c</columns>
        <columns>AMSTATCORP__Address_1__c</columns>
        <columns>AMSTATCORP__Address_2__c</columns>
        <columns>AMSTATCORP__Object_Type_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AMSTATCORP__Object_Type_Name__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Accounts</label>
    </listViews>
    <listViews>
        <fullName>AMSTATCORP__Aircraft_linking</fullName>
        <columns>NAME</columns>
        <columns>AMSTATCORP__Object_Type_Name__c</columns>
        <columns>AMSTATCORP__AMSTAT_Id__c</columns>
        <columns>AMSTATCORP__AMSTAT_Name__c</columns>
        <columns>AMSTATCORP__SFDC_ID__c</columns>
        <columns>AMSTATCORP__SFDC_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AMSTATCORP__Object_Type_Name__c</field>
            <operation>equals</operation>
            <value>Aircraft</value>
        </filters>
        <label>Aircraft</label>
    </listViews>
    <listViews>
        <fullName>AMSTATCORP__All</fullName>
        <columns>NAME</columns>
        <columns>AMSTATCORP__AMSTAT_Id__c</columns>
        <columns>AMSTATCORP__SFDC_ID__c</columns>
        <columns>AMSTATCORP__SFDC_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AMSTATCORP__Object_Type_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AMSTATCORP__Contacts</fullName>
        <columns>NAME</columns>
        <columns>AMSTATCORP__SFDC_ID__c</columns>
        <columns>AMSTATCORP__SFDC_Name__c</columns>
        <columns>AMSTATCORP__AMSTAT_Id__c</columns>
        <columns>AMSTATCORP__Address_1__c</columns>
        <columns>AMSTATCORP__Address_2__c</columns>
        <columns>AMSTATCORP__Object_Type_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AMSTATCORP__Object_Type_Name__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contacts</label>
    </listViews>
    <listViews>
        <fullName>AMSTATCORP__Leads</fullName>
        <columns>NAME</columns>
        <columns>AMSTATCORP__SFDC_ID__c</columns>
        <columns>AMSTATCORP__SFDC_Name__c</columns>
        <columns>AMSTATCORP__AMSTAT_Id__c</columns>
        <columns>AMSTATCORP__Address_1__c</columns>
        <columns>AMSTATCORP__Address_2__c</columns>
        <columns>AMSTATCORP__Object_Type_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AMSTATCORP__Object_Type_Name__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Leads</label>
    </listViews>
    <nameField>
        <displayFormat>LK{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>